# chess-engine

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
.github/workflows/: Pylint.yml  c-cpp.yml
chess-engine/: CMakeLists.txt
chess-engine/cpp/: CMakeLists.txt
chess-engine/cpp/include/: attacks.hpp  board.hpp  engine.hpp  legality.hpp  move.hpp  movegen.hpp  types.hpp
chess-engine/cpp/src/: bindings.cpp
